--- a/scan-video-file-with-ml5-person-detection/simple/index.html
+++ b/scan-video-file-with-ml5-person-detection/simple/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <html>
     <head style="display: block;">
         <script style="display: block;" src="https://unpkg.com/ml5@latest/dist/ml5.min.js">
