--- a/scan-video-file-with-ml5-person-detection/serverless/index.html
+++ b/scan-video-file-with-ml5-person-detection/serverless/index.html
@@ -19,6 +19,7 @@
         var item;
         
         window.onload=async function(){
+              console.log(ml5);
               $('#file').onclick            = select_file;
               btn                           = $('[value=start]')
               btn.onclick                   = click;
