--- a/scan-video-file-with-ml5-person-detection/serverless/index.html
+++ b/scan-video-file-with-ml5-person-detection/serverless/index.html
@@ -3,7 +3,7 @@
 
 <html style="height:100%">
     <head>
-        <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+        <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
         <script>
         
         var detector;
